--- a/package.json
+++ b/package.json
@@ -16,7 +16,15 @@
   },
   "devDependencies": {
     "gh-pages": "^2.0.1",
-    "typescript": "3.3.3"
+    "eslint": "^5.16.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-config-standard-jsx": "^6.0.2",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-react": "^7.13.0",
+    "eslint-plugin-react-hooks": "^1.6.0",
+    "eslint-plugin-standard": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
