--- a/package.json
+++ b/package.json
@@ -11,11 +11,10 @@
     "lodash": "4.17.11",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-scripts": "2.1.8",
     "wouter": "2.0.0"
   },
   "devDependencies": {
-    "gh-pages": "^2.0.1",
+    "babel-eslint": "^10.0.2",
     "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-config-standard-jsx": "^6.0.2",
@@ -24,14 +23,14 @@
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-react": "^7.13.0",
     "eslint-plugin-react-hooks": "^1.6.0",
-    "eslint-plugin-standard": "^4.0.0"
+    "eslint-plugin-standard": "^4.0.0",
+    "gh-pages": "^2.0.1",
+    "parcel-bundler": "^1.12.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "predeploy": "yarn build",
+    "dev": "parcel index.html --open",
+    "build": "parcel build index.html",
+    "predeploy": "parcel build index.html --public-url /wouter-async-routes",
     "deploy": "gh-pages -d build"
   },
   "browserslist": [
